--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -164,3 +164,13 @@ body {
 
 // Подключение стилей отдельных страниц
 @import "home";
+
+// .page__home
+.page {
+
+	// .page_home
+	&_home {}
+
+	// .page__main-block
+	&__main-block {}
+}
