--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -3,14 +3,19 @@
 
 .button {
 	display: inline-flex;
-	padding: 5px 10px;
-
+	padding: rem(8) rem(52);
+	background: $mainOrange;
+	box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
+	border-radius: 3px;
+	font-weight: 600;
+	font-size: rem(20);
+	color: #FFFFFF;
+	line-height: math.div(32, 20);
+	transition: box-shadow 0.3s ease 0s;
 
 	@media (any-hover: hover) {
-		&:hover {}
-	}
-
-	&._fw {
-		width: 100%;
+		&:hover {
+			box-shadow: 0px 4px 25px rgba(232, 170, 49, 0.63);
+		}
 	}
 }
