create product page(swiper-perallax, tippy, card slider

--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -2,7 +2,7 @@
 // Снипет (HTML): btn
 
 .button {
-	display: inline-flex;
+	display: inline-block;
 	padding: rem(8) rem(52);
 	background: $mainOrange;
 	box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
@@ -10,6 +10,8 @@
 	font-weight: 600;
 	font-size: rem(20);
 	color: #FFFFFF;
+	text-align: center;
+
 	line-height: math.div(32, 20);
 	transition: box-shadow 0.3s ease 0s;
 
