--- a/src/scss/base/forms/rating.scss
+++ b/src/scss/base/forms/rating.scss
@@ -3,13 +3,15 @@
 .rating {
 	display: flex;
 	align-items: flex-end;
-	font-size: 40px;
+	font-size: rem(30);
 	line-height: 0.75;
 	transition: opacity 0.3s ease 0s;
 }
+
 .rating.rating_sending {
 	opacity: 0.2;
 }
+
 .rating.rating_set .rating__active,
 .rating.rating_set .rating__item {
 	cursor: pointer;
@@ -17,11 +19,14 @@
 
 .rating__body {
 	position: relative;
+	letter-spacing: em(8, 30);
 }
+
 .rating__body::before {
 	content: "★★★★★";
 	display: block;
 }
+
 .rating__active {
 	position: absolute;
 	width: 0%;
@@ -30,6 +35,7 @@
 	left: 0;
 	overflow: hidden;
 }
+
 .rating__active::before {
 	content: "★★★★★";
 	position: absolute;
@@ -48,13 +54,21 @@
 	top: 0;
 	left: 0;
 }
+
 .rating__item {
 	flex: 0 0 20%;
 	height: 100%;
 	opacity: 0;
 }
+
 .rating__value {
 	font-size: 50%;
 	line-height: 1;
+	display: none;
 	padding: 0px 0px 0px 10px;
+}
+
+.rating__info {
+	font-size: rem(16);
+	color: #ABABAB;
 }
