create product-cards page, footer

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,3 +1,5 @@
+//====================================================================================================
+//MAIN CONTENT
 .products-slider {
 
    // .products-slider__container
@@ -5,12 +7,15 @@
 
    // .products-slider__heade
    &__header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
       &:not(:last-child) {
          @include adaptiveValue("margin-bottom", 50, 30);
+      }
+
+      @media (min-width:$mobile) {
+         display: flex;
+         align-items: center;
+         justify-content: space-between;
+         gap: rem(20);
       }
    }
 
@@ -53,9 +58,15 @@
       margin: 0px rem(-20);
    }
 
+   &__swiper {
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 50, 30);
+      }
+
+   }
 }
 
-
+//====================================================================================================
 .product-card {
    background-color: #fff;
    display: grid;
@@ -175,6 +186,7 @@
    }
 }
 
+//======================================================================================
 .info-product-card {
    color: #ABABAB;
    display: flex;
@@ -186,9 +198,12 @@
    &__size {}
 
    // .info-product-card__materials
-   &__materials {}
+   &__materials {
+      text-align: right;
+   }
 }
 
+//======================================================================================
 .dotts {
    display: grid;
    grid-auto-flow: column;
@@ -239,4 +254,128 @@
          left: rem(8);
       }
    }
+}
+
+//====================================================================================================
+//new product block
+.products-new {
+   padding: rem(45) 0px 0px 0px;
+   position: relative;
+   background: url('@img/new-products/bg.jpg') bottom / cover no-repeat;
+
+   &::before {
+      content: '';
+      background-color: #fff;
+      height: 45px;
+      position: absolute;
+      right: 0;
+      width: percent(1030, 1920);
+      top: 0
+   }
+
+   // .products-new__inner
+   &__inner {
+      @include adaptiveValue("padding-top", 55, 20);
+      @include adaptiveValue("padding-bottom", 55, 20);
+   }
+
+   // .products-new__container
+   &__container {
+      display: grid;
+      row-gap: rem(40);
+
+      @media (min-width:$tablet) {
+         grid-template-columns: rem(400) 1fr;
+         align-items: start;
+      }
+   }
+
+   // .products-new__body
+   &__body {
+      @include adaptiveValue("padding-right", 70, 30, 1630, 992, 2);
+   }
+
+   &__section {
+      position: relative;
+      z-index: 2;
+   }
+
+   // .products-new__title
+   &__title {
+      font-weight: bold;
+      font-size: rem(30);
+      color: #fff;
+      line-height: math.div(46, 30);
+
+      &:not(:last-child) {
+         margin-bottom: em(30, 30);
+      }
+   }
+
+   // .products-new__text
+   &__text {
+      font-size: rem(18);
+      line-height: math.div(27, 18);
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.7);
+
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 60, 20);
+      }
+
+      &:not(:last-child) {
+         margin-bottom: em(30, 30);
+      }
+   }
+
+   // .products-new__link
+   &__link {}
+
+   &__content {
+      min-width: 0;
+
+      @media (min-width:$tablet) {
+         padding: rem(37) 0px 0px 0px;
+      }
+   }
+
+   // .products-new__slider
+   &__slider {}
+
+   // .products-new__wrapper
+   &__swiper {
+      &:not(:last-child) {
+         @include adaptiveValue("margin-bottom", 50, 20);
+      }
+   }
+
+   // .products-new__slide
+   &__slide {}
+}
+
+//========================================================================================================================================================
+.link-arrow {
+   display: inline-flex;
+   flex-direction: row-reverse;
+   align-items: center;
+   font-weight: 600;
+   font-size: rem(20);
+   line-height: math.div(46, 20);
+   letter-spacing: 0.05em;
+   color: #E8AA31;
+
+   &::before {
+      margin: 0px 0px 0px em(20, 20);
+      transform: rotate(-90deg);
+      font-size: rem(8);
+   }
+
+   @media (any-hover: hover) {
+      &:hover {
+         span {
+            text-decoration: underline;
+         }
+      }
+   }
+
 }
