--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -351,8 +351,6 @@
 
 //====================================================================================================
 .catalog-cards {
-   @include adaptiveValue("padding-top", 100, 40);
-   @include adaptiveValue("padding-bottom", 70, 40);
 
    // .catalog-card__container
    &__container {
@@ -380,7 +378,6 @@
          box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
       }
    }
-
 
    // .item-catalog-cards__body
    &__body {
@@ -484,3 +481,229 @@
 }
 
 //====================================================================================================
+.hits-product {
+   @include adaptiveValue("padding-top", 50, 40);
+   @include adaptiveValue("padding-bottom", 120, 40);
+
+   &_no-top {
+      padding-top: 0
+   }
+}
+
+.sale-products {
+   @include adaptiveValue("padding-top", 120, 40);
+   @include adaptiveValue("padding-bottom", 120, 40);
+
+   &_no-bottom {
+      padding-bottom: 0
+   }
+}
+
+//========================================================================================================================================================
+.articles-module {
+   @include adaptiveValue("padding-bottom", 120, 40);
+
+   // .articles-module__container
+   &__container {}
+
+   // .articles-module__title
+   &__title {
+      letter-spacing: 0.05em;
+      font-size: rem(30);
+      font-weight: 700;
+      line-height: math.div(46, 30);
+
+      &:not(:last-child) {
+         margin-bottom: em(30, 30);
+      }
+   }
+
+   // .articles-module__items
+   &__items {
+      display: grid;
+      gap: rem(30);
+      grid-template-columns: repeat(auto-fit, minmax(rem(290), 1fr));
+   }
+
+   // .articles-module__item
+   &__item {}
+}
+
+.article-item {
+
+   // .article-item__title
+   &__title {}
+}
+
+.item-article {
+   background-color: #fff;
+   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+   display: flex;
+   flex-direction: column;
+   height: 100%;
+   transition: box-shadow 0.3s ease 0s;
+
+   @media (any-hover: hover) {
+      &:hover {
+         box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.2);
+      }
+   }
+
+   // .item-article__image-ibg
+   &__image-ibg {
+      padding-bottom: percent(200, 376);
+   }
+
+   // .item-article__body
+   &__body {
+      flex: 1 1 auto;
+      display: flex;
+      flex-direction: column;
+      @include adaptiveValue("padding", 25, 15);
+   }
+
+   // .item-article__title
+   &__title {
+      flex: 1 1 auto;
+
+      &:not(:last-child) {
+         margin-bottom: em(16, 20);
+      }
+   }
+
+   // .item-article__link-title
+   &__link-title {
+      font-weight: 600;
+      font-size: rem(20);
+      line-height: math.div(34, 20);
+
+      @media (any-hover: hover) {
+         &:hover {
+            text-decoration: underline;
+         }
+      }
+   }
+
+   //.item-article__date
+   &__date {
+      font-size: rem(16);
+      line-height: math.div(34, 20);
+      color: #ABABAB;
+   }
+}
+
+//========================================================================================================================================================
+.products-block {
+   @include adaptiveValue("margin-bottom", 120, 40);
+
+   // .products-block__container
+   &__container {
+      display: grid;
+      gap: rem(30);
+
+      @media (min-width: $mobileSmall) {
+         grid-template-columns: repeat(auto-fit, minmax(rem(600), 1fr));
+      }
+   }
+
+   // .products-block__item
+   &__item {}
+}
+
+.product-block {
+   overflow: hidden;
+   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+   position: relative;
+   min-height: rem(290);
+   transition: box-shadow 0.3s ease 0s;
+
+   @media (any-hover: hover) {
+      &:hover {
+         box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
+      }
+   }
+
+   // .product-block__body
+   &__body {
+      position: relative;
+      z-index: 2;
+      @include adaptiveValue("padding", 30, 20);
+   }
+
+   // .product-block__title
+   &__title {
+      &:not(:last-child) {
+         margin-bottom: em(30, 24);
+      }
+   }
+
+   // .product-block__text
+   &__text {
+      font-size: rem(18);
+      line-height: math.div(27, 18);
+
+      &:not(:last-child) {
+         margin-bottom: em(46, 18);
+      }
+
+      @media (min-width: em(710)) {
+         max-width: rem(265);
+      }
+   }
+
+   // .product-block__link-title
+   &__link-title {
+      font-weight: 600;
+      font-size: rem(24);
+      line-height: math.div(34, 24);
+      display: inline-block;
+
+      &::after {
+         content: "";
+         width: rem(70);
+         height: rem(2);
+         display: block;
+         margin: rem(15) 0px 0px 0px;
+         background-color: $mainOrange;
+         transition: width 0.8s ease 0s;
+      }
+
+      @media (any-hover: hover) {
+         &:hover {
+            &::after {
+               width: 100%;
+            }
+         }
+      }
+   }
+
+   // .product-block__image
+   &__image {
+      width: 100%;
+      text-align: right;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      transform: translate(0px, 8%);
+
+      img {
+         max-width: 100%;
+      }
+
+      @media (min-width: em(710)) {
+         position: absolute;
+         height: 100%;
+         top: 0;
+         right: 0;
+      }
+   }
+
+   // .product-block__button
+   &__button {
+      @media (max-width: em(710)) {
+         width: 100%;
+      }
+   }
+}
+
+//========================================================================================================================================================
