--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -20,4 +20,19 @@
 			box-shadow: 0px 4px 25px rgba(232, 170, 49, 0.63);
 		}
 	}
+
+	&_border {
+		background-color: #fff;
+		border: 1px solid $mainOrange;
+		color: $mainOrange;
+		box-shadow: none;
+	}
+
+	&_black {
+		background-color: #000;
+		color: #fff;
+		box-shadow: none;
+		padding: rem(8) rem(30);
+	}
+
 }
