--- a/src/scss/base/forms/checkbox.scss
+++ b/src/scss/base/forms/checkbox.scss
@@ -1,21 +1,26 @@
 .checkbox {
 	position: relative;
+
 	&:not(:last-child) {
 		margin-bottom: em(5);
 	}
+
 	// .checkbox__input
 	&__input {
 		position: absolute;
 		width: 0;
 		height: 0;
 		opacity: 0;
-		&:focus + .checkbox__label:before {
-			box-shadow: 0 0 5px #000;
+
+		&:focus+.checkbox__label:before {
+			// box-shadow: 0 0 5px #000;
 		}
-		&:checked + .checkbox__label:before {
-			background: #000;
+
+		&:checked+.checkbox__label::after {
+			transform: scale(1);
 		}
 	}
+
 	// .checkbox__label
 	&__label {
 		cursor: pointer;
@@ -23,16 +28,36 @@
 		align-items: center;
 		position: relative;
 		gap: 10px;
+
 		&:before {
 			content: "";
 			align-self: flex-start;
-			flex: 0 0 20px;
-			width: 20px;
-			height: 20px;
-			border: 1px solid #a7a9ac;
+			flex: 0 0 rem(20);
+			width: rem(20);
+			height: rem(20);
+			// border: 1px solid #a7a9ac;
+			border: 1px solid #E8AA31;
+			border-radius: rem(2);
+		}
+
+		&::after {
+			content: '';
+			transition: all 0.3s ease 0s;
+			transform: scale(0);
+			position: absolute;
+			width: rem(16);
+			height: rem(16);
+			top: 2px;
+			left: 2px;
+			background-color: #E8AA31;
 		}
 	}
+
 	// .checkbox__text
 	&__text {
+		small {
+			color: #E8AA31;
+			padding: 0px 0px 0px rem(15);
+		}
 	}
 }
