--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -28,7 +28,7 @@
 
 // <CHECK>
 // Снипет (HTML): chk
-// @import "checkbox";
+@import "checkbox";
 
 // <RADIO>
 // Снипет (HTML): opt
@@ -36,7 +36,7 @@
 
 // <SELECT>
 // Снипет (HTML): sel
-// @import "select";
+@import "select";
 
 // <RATING>
 // Снипет (HTML): rating
@@ -44,11 +44,11 @@
 
 // <QUANTITY>
 // Снипет (HTML): qa
-// @import "quantity";
+@import "quantity";
 
 // <RANGE>
 // Снипет (HTML):
-// @import "range";
+@import "range";
 
 // <CALENDAR>
 // Снипет (HTML):
