--- a/src/scss/base/forms/quantity.scss
+++ b/src/scss/base/forms/quantity.scss
@@ -1,15 +1,18 @@
 //<QUANTITY>
 // Снипет (HTML): qa
 .quantity {
-	width: 88px;
-	height: 40px;
+	width: 150px;
+	height: 50px;
 	display: flex;
 	border: 1px solid rgba(166, 166, 166, 0.45);
+
 	// .quantity__button
 	&__button {
-		flex: 0 0 30px;
+		flex: 0 0 50px;
 		position: relative;
 		cursor: pointer;
+		background-color: #000;
+
 		&::before,
 		&::after {
 			content: "";
@@ -22,27 +25,32 @@
 			width: 9px;
 			height: 1px;
 		}
+
 		@media (any-hover: hover) {
 			&:hover {
+
 				&::before,
 				&::after {
 					background-color: rgba(0, 0, 0, 0.5);
 				}
 			}
 		}
+
 		// .quantity__button_plus
 		&_plus {
 			&::before {
 				transform: rotate(-90deg);
 			}
 		}
+
 		// .quantity__button_minus
-		&_minus {
-		}
+		&_minus {}
 	}
+
 	// .quantity__input
 	&__input {
 		flex: 1 1 auto;
+
 		input {
 			height: 100%;
 			color: #a6a6a6;
