--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -2,10 +2,12 @@
 // Снипет (HTML): sel
 .select {
 	position: relative;
+
 	// .select__body
 	&__body {
 		position: relative;
 	}
+
 	// .select__title
 	&__title {
 		color: inherit;
@@ -16,6 +18,7 @@
 		width: 100%;
 		border-radius: 4px;
 	}
+
 	// .select__value
 	&__value {
 		display: flex;
@@ -23,9 +26,11 @@
 		height: rem(30);
 		padding: 0 rem(15);
 		gap: rem(10);
-		> * {
+
+		>* {
 			flex: 1 1 auto;
 		}
+
 		&:after {
 			content: "";
 			align-self: stretch;
@@ -34,10 +39,12 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+
 			._select-open & {
 				transform: rotate(-180deg);
 			}
 		}
+
 		&._select-pseudo-label {
 			&::before {
 				content: attr(data-pseudo-label);
@@ -45,15 +52,18 @@
 			}
 		}
 	}
+
 	// .select__text
 	&__text {
 		flex: 1 1 auto;
 	}
+
 	&__input {
 		width: 100%;
 		background-color: transparent;
 		height: 100%;
 	}
+
 	// .select__options
 	&__options {
 		color: #000;
@@ -68,12 +78,14 @@
 		border-top: 0;
 		padding: 10px 0px 5px 0px;
 	}
+
 	// .select__scroll
 	&__scroll {
 		overflow-y: auto;
 		overflow-x: hidden;
 		// Максимальная высота
 		max-height: 200px;
+
 		// Стили скроллбара
 		.simplebar-scrollbar {
 			&::before {
@@ -81,6 +93,7 @@
 			}
 		}
 	}
+
 	// .select__option
 	&__option {
 		width: 100%;
@@ -88,9 +101,11 @@
 		cursor: pointer;
 		padding: 5px 15px;
 		color: inherit;
+
 		&._select-selected {
 			background-color: #eee;
 		}
+
 		@media (any-hover: hover) {
 			&:hover {
 				background: #d9d9d9;
@@ -103,25 +118,60 @@
 		display: inline-flex;
 		align-items: center;
 	}
-	&__asset {
-	}
-	&__text {
-	}
+
+	&__asset {}
+
+	&__text {}
 
 	// Состояния селекта
 	&._select-open {
 		z-index: 5;
 	}
-	&._select-disabled {
+
+	&._select-disabled {}
+
+	&._select-active {}
+
+	&._select-focus {}
+
+	&._select-multiple {}
+
+	&._select-checkbox {}
+
+	&_control {
+
+		.select__title {
+			border: 1px solid rgba(4, 4, 4, 0.3);
+			border-radius: rem(3);
+			line-height: math.div(20, 16);
+
+		}
+
+		.select__value {
+			height: rem(40);
+			color: rgba(0, 0, 0, 0.5);
+			// padding: 0px rem(25) 0px rem(15);
+
+			&::after {
+				color: rgba(0, 0, 0, 0.5);
+				font-size: rem(8);
+				@extend %ic;
+				content: "\e900";
+				margin-left: em(10, 8);
+			}
+		}
+
+		.select__option {
+			color: rgba(0, 0, 0, 0.5);
+
+			@media (any-hover: hover) {
+				&:hover {
+					color: rgba(0, 0, 0, 1);
+				}
+			}
+		}
 	}
-	&._select-active {
-	}
-	&._select-focus {
-	}
-	&._select-multiple {
-	}
-	&._select-checkbox {
-	}
+
 }
 
 // Тег
