--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,5 +1,6 @@
 //====================================================================================================
 .footer {
+   background-color: $darkColor;
 
    // .footer__text
    &__text {}
@@ -12,8 +13,8 @@
 }
 
 .text-footer {
-   @include adaptiveValue("paddind-top", 60, 40);
-   @include adaptiveValue("paddind-bottom", 60, 40);
+   @include adaptiveValue("padding-top", 60, 40);
+   @include adaptiveValue("padding-bottom", 60, 40);
    background: url('@img/footer/bg.jpg') top / cover no-repeat;
 
    // .text-footer__container
@@ -42,8 +43,232 @@
    }
 }
 
-.body-footer {
-   background-color: $darkColor;
-}
+.body-footer {}
 
 //====================================================================================================
+//BODY-FOOTER
+.body-footer {
+   @include adaptiveValue("padding-top", 100, 40);
+   @include adaptiveValue("padding-bottom", 50, 40);
+   display: grid;
+   @include adaptiveValue("gap", 35, 25);
+
+   // .body-footer__item
+   &__item {}
+
+   &__row {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(rem(290), 1fr));
+      column-gap: rem(40);
+      @include adaptiveValue("row-gap", 40, 20);
+
+      &:not(:last-child) {
+         padding: 0px 0px rem(30) 0px;
+         border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+
+      }
+   }
+
+   // .body-footer__bottom
+   &__bottom {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: rem(14);
+      line-height: math.div(27, 14);
+
+      @media (min-width:em(1200)) {
+         display: flex;
+         gap: rem(20);
+         justify-content: space-between;
+      }
+   }
+
+   // .body-footer__rules
+   &__rules {
+      max-width: rem(820);
+   }
+
+   // .body-footer__copirite
+   &__copirite {
+      span {
+         white-space: nowrap;
+      }
+   }
+}
+
+.item-footer {
+
+   // .item-footer__spollers
+   &__spollers {}
+}
+
+.spollers-item-footer {
+
+   // .spollers-item-footer__item
+   &__item {}
+
+   // .spollers-item-footer__title
+   &__title {
+      text-transform: uppercase;
+      color: #fff;
+      font-weight: 600;
+      line-height: math.div(22, 18);
+
+      ._spoller-init & {
+         display: flex;
+         justify-content: space-between;
+         gap: rem(10);
+         width: 100%;
+
+         &::after {
+            content: "\e900";
+            @extend %ic;
+            font-size: rem(10);
+            margin-top: em(5, 8);
+            transition: transform 0.3s ease 0s;
+         }
+
+         &._spoller-active {
+            &::after {
+               transform: rotate(-180deg);
+            }
+         }
+      }
+   }
+
+   // .spollers-item-footer__body
+   &__body {
+      @include adaptiveValue(" padding-top", 30, 20);
+      @include adaptiveValue(" padding-bottom", 30, 20);
+   }
+
+   &__text {
+      line-height: math.div(27, 18);
+      color: #fff;
+      max-width: rem(320);
+
+      a {
+         color: $mainOrange;
+
+         @media (any-hover: hover) {
+            &:hover {
+               text-decoration: underline;
+            }
+         }
+      }
+   }
+}
+
+.menu-footer {
+   &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 32, 20);
+   }
+
+   // .menu-footer__list
+   &__list {}
+
+   // .menu-footer__item
+   &__item {
+      line-height: 1.5;
+      display: flex;
+      color: rgba(255, 255, 255, 0.8);
+
+      &:not(:last-child) {
+         margin-bottom: em(20, 18);
+      }
+
+      &::before {
+         font-size: rem(19);
+         margin: em(5, 15) em(10, 15) 0px 0px;
+
+      }
+   }
+
+   // .menu-footer__link
+   &__link {
+      display: inline-flex;
+      line-height: math.div(27, 18);
+      color: rgba(255, 255, 255, 0.8);
+
+      &::before {
+         font-size: rem(20);
+         margin: em(5, 15) em(10, 15) 0px 0px;
+      }
+
+      &._icon-footer-email {
+         &::before {
+            font-size: rem(15);
+
+         }
+      }
+   }
+}
+
+.social-footer {
+   display: flex;
+   gap: rem(24);
+
+
+   // .social-footer__item
+   &__item {}
+
+   // .social-footer__link
+   &__link {}
+}
+
+//========================================================================================================================================================
+.footer-subscribe {
+
+   // .footer-subscribe__label
+   &__label {
+      line-height: math.div(22, 18);
+      display: block;
+      color: rgba(255, 255, 255, 0.8);
+
+      &:not(:last-child) {
+         margin-bottom: em(10, 18);
+      }
+   }
+
+   // .footer-subscribe__line
+   &__line {
+      display: flex;
+      position: relative;
+
+      .form__error {
+         position: absolute;
+         bottom: -15px;
+         font-size: rem(10);
+         color: red;
+      }
+   }
+
+   // .footer-subscribe__input
+   &__input {
+      background: rgba(255, 255, 255, 0.05);
+      height: rem(48);
+      padding: 0px rem(20);
+      color: #fff;
+      width: 100%;
+      border: 1px solid #fff;
+      border-right: none;
+      border-radius: rem(3) 0 0 rem(3);
+   }
+
+   // .footer-subscribe__button
+   &__button {
+      border-radius: 0 rem(3) rem(3) 0;
+      flex: 0 0 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $mainOrange;
+
+      &::before {
+         color: #fff;
+         transform: rotate(90deg);
+         font-size: rem(8);
+      }
+   }
+}
+
+//========================================================================================================================================================
